Implementação de componentes carrinho e pagamento, com a API da PayPal.

--- a/src/index.html
+++ b/src/index.html
@@ -15,8 +15,14 @@
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 
+<script
+  src="https://www.paypal.com/sdk/js?client-id=AaoabeQCUvUGg1iKy2r6Zw3sxQa6eM_jpC88ZdJsvqy2wUs9CVSGK5AQ8IjyvgEPNCF86bCnEiP3S315&currency=BRL">
+</script>
+
 <body>
   <app-root></app-root>
 </body>
+
+
 
 </html>
