--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>LivrariaAbraco</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://i.imgur.com/uf5CaLc.png">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&display=swap"
@@ -17,12 +17,10 @@
 
 <script
   src="https://www.paypal.com/sdk/js?client-id=AaoabeQCUvUGg1iKy2r6Zw3sxQa6eM_jpC88ZdJsvqy2wUs9CVSGK5AQ8IjyvgEPNCF86bCnEiP3S315&currency=BRL">
-</script>
+  </script>
 
 <body>
   <app-root></app-root>
 </body>
-
-
 
 </html>
